fixed stability issues

--- a/index.html
+++ b/index.html
@@ -547,58 +547,58 @@
                 <div class="content" style="font-size: 48px;">All Skills</div>
             </div>
             <div class="inner-container">
-            <div class="image" style="background-image: url('imgs/net.jpg');"></div> 
+            <div class="image2" style="background-image: url('imgs/net.jpg');"></div> 
             <div class="content">.NET</div></div>
             <div class="inner-container">
-            <div class="image" style="background-image: url('imgs/csharp.png');"></div> 
+            <div class="image2" style="background-image: url('imgs/csharp.png');"></div> 
             <div class="content">C#</div></div>
             <div class="inner-container">
-            <div class="image" style="background-image: url('imgs/xl.png');"></div> 
+            <div class="image2" style="background-image: url('imgs/xl.png');"></div> 
             <div class="content">Excel</div></div>
             <div class="inner-container">
-            <div class="image" style="background-image: url('imgs/git.jpg');"></div> 
+            <div class="image2" style="background-image: url('imgs/git.jpg');"></div> 
             <div class="content">Git</div></div>
             <div class="inner-container">
-            <div class="image" style="background-image: url('imgs/html.jpg');"></div> 
+            <div class="image2" style="background-image: url('imgs/html.jpg');"></div> 
             <div class="content">HTML</div></div>
             <div class="inner-container">
-            <div class="image" style="background-image: url('imgs/java.jpg');"></div> 
+            <div class="image2" style="background-image: url('imgs/java.jpg');"></div> 
             <div class="content">Java</div></div>
             <div class="inner-container">
-            <div class="image" style="background-image: url('imgs/js.png');"></div> 
+            <div class="image2" style="background-image: url('imgs/js.png');"></div> 
             <div class="content">Javascript</div></div>
             <div class="inner-container">
-            <div class="image" style="background-image: url('imgs/kali.jpg');"></div> 
+            <div class="image2" style="background-image: url('imgs/kali.jpg');"></div> 
             <div class="content">Kali Linux</div></div>
             <div class="inner-container">
-            <div class="image" style="background-image: url('imgs/ml.png');"></div> 
+            <div class="image2" style="background-image: url('imgs/ml.png');"></div> 
             <div class="content">Machine Learning</div></div>
             <div class="inner-container">
-            <div class="image" style="background-image: url('imgs/mssql.jpg');"></div> 
+            <div class="image2" style="background-image: url('imgs/mssql.jpg');"></div> 
             <div class="content">MS SQL Server</div></div>
             <div class="inner-container">
-            <div class="image" style="background-image: url('imgs/oracle.png');"></div> 
+            <div class="image2" style="background-image: url('imgs/oracle.png');"></div> 
             <div class="content">Oracle SQL Developer</div></div>
-            <div class="inner-container" >
-            <div class="image" style="background-image: url('imgs/python.png');" onclick="callExpand('fullscreen-overlay-python','imgs/python.png','fullscreen-overlay-python')"></div> 
+            <div class="inner-container" onclick="enableFullscreen('imgs/python.png','fullscreen-overlay-python')">
+            <div class="image2" style="background-image: url('imgs/python.png');"></div> <!--onclick="callExpand('fullscreen-overlay-python','imgs/python.png','fullscreen-overlay-python')"></div> -->
             <div class="content">Python</div></div>
             <div class="inner-container">
-            <div class="image" style="background-image: url('imgs/r.png');"></div> 
+            <div class="image2" style="background-image: url('imgs/r.png');"></div> 
             <div class="content">R</div></div>
             <div class="inner-container">
-            <div class="image" style="background-image: url('imgs/redhat.jpg');"></div> 
+            <div class="image2" style="background-image: url('imgs/redhat.jpg');"></div> 
             <div class="content">Red Hat Linux</div></div>
             <div class="inner-container">
-            <div class="image" style="background-image: url('imgs/splunk.png');"></div> 
+            <div class="image2" style="background-image: url('imgs/splunk.png');"></div> 
             <div class="content">Splunk</div></div>
             <div class="inner-container">
-            <div class="image" style="background-image: url('imgs/spring.png');"></div> 
+            <div class="image2" style="background-image: url('imgs/spring.png');"></div> 
             <div class="content">Spring Boot</div></div>          
             <div class="inner-container">
-            <div class="image" style="background-image: url('imgs/tableau.png');"></div> 
+            <div class="image2" style="background-image: url('imgs/tableau.png');"></div> 
             <div class="content">Tableau</div></div>
             <div class="inner-container">
-            <div class="image" style="background-image: url('imgs/vs.png');"></div> 
+            <div class="image2" style="background-image: url('imgs/vs.png');"></div> 
             <div class="content">Visual Studio</div></div>
         </div>
     
@@ -660,19 +660,22 @@
 <script>
 
     function enableFullscreen(imageUrls,Overlay) {
-      const clickableImages = document.querySelectorAll('.image');
+      const clickableImages = document.querySelectorAll('.image2');
       const fullscreenOverlay = document.getElementById(Overlay);
       const fullscreenImage = document.getElementById('fullscreen-image');
 
       clickableImages.forEach((image, index) => {
         image.addEventListener('click', () => {
-          fullscreenImage.src = imageUrls;
-          fullscreenOverlay.style.display = 'flex';
+            fullscreenImage.src = imageUrls;
+            fullscreenOverlay.style.display = 'flex';
+            //animate to slide in
+            fullscreenOverlay.classList.add('slide-in');
         });
       });
 
       fullscreenOverlay.addEventListener('click', () => {
         fullscreenOverlay.style.display = 'none';
+        fullscreenOverlay.classList.remove('slide-in');
       });
     }
 
